--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/GameStore.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.derbyclient.jar=C:\\Program Files (x86)\\glassfish-4.1.1\\javadb\\lib\\derbyclient.jar
+file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Program Files (x86)\\MySQL\\Connector.J 5.1\\mysql-connector-java-5.1.39-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
